# simd-chess

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
draft/: chess.rs
draft/movegen/: draft_ordered_movegen.rs
draft/search/: draft_psquare.rs  transposition.rs  transposition_v2.rs  v1_negamax.rs  v3_itdep.rs  v4_pv.rs  v9_prune.rs
scripts/: uica.mts
src/: chess.rs  clipb.rs  constant.rs  main.rs  matchmaking.rs  pgn.rs  ui.rs  util.rs  window.rs
src/engine/: chess.rs  chess_v2.rs  mod.rs  ownbook.rs  search.rs  tables.rs
src/engine/search/: eval.rs  mod.rs  moves.rs  repetition.rs  repetition_v2.rs  search.rs  search_params.rs  see.rs  sorting.rs  stability.rs  timeman.rs  transposition.rs  transposition_v2.rs  transposition_v3.rs  v10_mvcache.rs  v11_opt.rs  v12_eval.rs  v12_eval_sp.rs  v13_nnue.rs  v1_negamax.rs  v2_alphabeta.rs  v3_itdep.rs  v4_pv.rs  v5_tt.rs  v6_psquare.rs  v7_mvvlva.rs  v7_quiesc.rs  v8_quiesc.rs  v9_prune.rs
src/engine/sorting/: mod.rs  u16.rs  u32.rs
src/matchmaking/: fen_feeder.rs  matchmaking.rs  mod.rs  openings.rs  pgn.rs  process.rs  selfplay.rs
src/nnue/: annotation.rs  mod.rs  nnue.rs  training.rs
src/pgn/: extract.rs  mod.rs  moves.rs  parse.rs  parsemoves.rs
src/scripts/: lichess_parser.rs  mod.rs
src/uci/: context.rs  mod.rs  option.rs  uci.rs
src/ui/: chess_ui.rs  mod.rs  square_ui.rs
src/uicomponents/: mod.rs  text_input.rs
