[package]
name = "simd-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
imgui = "0.12.0"
imgui-wgpu = "0.25.0"
imgui-winit-support = "0.13.0"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.0"
image = { version = "0.24", features = ["png"] }
clipboard = "0.5.0"
rand = "0.9.1"
anyhow = "1.0.98"
crossbeam = "0.8.4"
core_affinity = "0.8.3"
sfbinpack = { version = "0.4.3", features = ["bmi2"] }
bullet = { git = "https://github.com/jw1912/bullet", rev = "47f2c84", package = "bullet_lib" }
zstd = "0.13.3"

[profile.release]
debug = true
